--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
    <body>
-	<li> very good  motar </li>
+	<li> full modified and conflict  motar </li>
 	<li> bricks </li>
    </body>
 </html>
